[project]
name = "prompty"
version = "0.1.0"
description = "A Python package for prompt optimization and prototyping"
authors = [
    {name = "Mattia Pennacchietti",email = "1404268@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
dependencies = [
    "openai>=1.0.0",
    "groq>=0.4.0",
    "optuna>=3.0.0",
    "numpy>=1.25.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0",
    "langchain-core (>=0.3.51,<0.4.0)",
    "langchain (>=0.3.23,<0.4.0)",
    "langchain-community (>=0.3.21,<0.4.0)",
    "datasets (>=3.5.0,<4.0.0)",
    "langchain-openai (>=0.3.12,<0.4.0)",
    "nest-asyncio (>=1.6.0,<2.0.0)",
    "sentence-transformers (>=4.0.2,<5.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

